# rasterizer

./: CMakeLists.txt  LICENSE  justfile  main.cpp
src/: frame_buffer.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
